--- a/embedded/sensor.tex
+++ b/embedded/sensor.tex
@@ -22,7 +22,7 @@ An advantage of the MPU6050 is that it allows control of whether individual axes
 		0 & Gyroscope - Z \\
 		\hline
 	\end{tabular}
-	\caption{Standby mode configurations}
+	\caption{Standby mode configurations~\cite{sensor_registers}}
 	\label{tab:sensor:power}
 \end{table}
 
@@ -42,7 +42,7 @@ The gyroscope can operate at a variety of sensitivities, from $\pm 250$ to $\pm 
 		3 & $\pm 2000~\degree / sec$ \\
 		\hline
 	\end{tabular}
-	\caption{Values to select gyroscope sensitivity}
+	\caption{Values to select gyroscope sensitivity~\cite{sensor_registers}}
 	\label{tab:gyro:range}
 \end{table}
 
@@ -62,7 +62,7 @@ The sensitivities that the accelerometer can operate at range between $\pm 2$ to
 		3 & $\pm 16g$ \\
 		\hline
 	\end{tabular}
-	\caption{Values to select accelerometer sensitivity}
+	\caption{Values to select accelerometer sensitivity~\cite{sensor_registers}}
 	\label{tab:accel:range}
 \end{table}
 
@@ -82,6 +82,6 @@ To accomplish this, two registers need to be interacted with, Registers 107 and 
 		3 & 40 Hz & $110\mu A$ \\
 		\hline
 	\end{tabular}
-	\caption{Wake frequencies for the MPU6050}
+	\caption{Wake frequencies for the MPU6050~\cite{sensor_registers}}
 	\label{tab:sensor:wake}
 \end{table}
