Fixed UCF Title

--- a/appendices/ucf.tex
+++ b/appendices/ucf.tex
@@ -1,4 +1,4 @@
-\chapter{User Constran}\label{ch:ucffile}
+\chapter{User Constraints File}\label{ch:ucffile}
 
 This file shows the user constraint file for the Nexys4.
 
