Added intro paragraph to Embedded Chapter

--- a/embedded/embedded.tex
+++ b/embedded/embedded.tex
@@ -1,5 +1,7 @@
 \chapter{Embedded Development}\label{chap:embedded}
 
+During a meeting with the project's client, the possibility of obtaining a prototype sub-threshold device from ARM was briefly discussed. However, this was quickly dismissed as it was still in development, meaning there are only a few built versions and these may not be in a suitable state for active development. As such, it was decided that the constrained conditions would, instead, need to be emulated. Emulation proved to be useful, as it allowed the team to use limited conditions when developing and testing the system, but still able to use larger systems such as serial communication for the purposes of debugging.
+
 \input{embedded/emulation/emulation}
 \input{embedded/initialdesign}
 \input{embedded/fpga}
