Changes units and removes std in power

--- a/results/power.tex
+++ b/results/power.tex
@@ -16,12 +16,12 @@ The power consumption of the sensor is not constant over time due to the fact th
     \centering
     \begin{tabular}{|l|r|r|}
         \hline
-        Parameter & Mean Value & Standard Deviation \\
+        Parameter & Mean Value \\
         \hline
-        Resistor Voltage (V) & 0.0262 & 0.00198 \\
-        Sensor Voltage (V) & 3.29 & 0.00133 \\
-        Current (A) & 0.000262 & \\
-        Power (W) & 0.00086198 & \\
+        Resistor Voltage (mV) & 0.0262 \\
+        Sensor Voltage (V) & 3.29 \\
+        Current ($\mu$A) & 262 \\
+        Power ($\mu$W) & 861.98 \\
         \hline
     \end{tabular}
     \caption{Power statistics for the sensor}
