--- a/figures/classifiers.tex
+++ b/figures/classifiers.tex
@@ -9,8 +9,10 @@
 	\begin{tikzpicture}
 	\begin{axis}[
 	ybar,
-	width  = 16cm,
-	height = 10cm,
+	width  = 12cm,
+	height = 7cm,
+	ymax=1,
+	ymin=0.7,
 	enlargelimits=0.10,
 	legend style={at={(0.5,-0.2)},
 		anchor=north,legend columns=-1},
