changed the part number in report xc6...

--- a/embedded/fpga.tex
+++ b/embedded/fpga.tex
@@ -118,7 +118,7 @@ The \verb|AHBLITE_SYS.v| contains the top-level module. The AHB-Lite is a subset
 
 The \verb|ARMSOC_s6.ucf| file is the user constraint file which creates the connection between the assigned nets and FPGA pins.
 
-All of these files files need to be added to a Vivado project in order to create and download the bitstream file to the FPGA. A new project was created, specifying that it is a RTL project. A mixed implementation setting between Verilog/VHDL will be required for this project. The processor is described in Verilog while the additional modules are in VHDL. Next, in the list of Xilinx parts, the XC7A100T-1CSG324C needs to be selected because this is the part name for the Nexys4 board. 
+All of these files files need to be added to a Vivado project in order to create and download the bitstream file to the FPGA. A new project was created, specifying that it is a RTL project. A mixed implementation setting between Verilog/VHDL will be required for this project. The processor is described in Verilog while the additional modules are in VHDL. Next, in the list of Xilinx parts, the XC6SLV16-2CSG324 needs to be selected because this is the part name for the Nexys4 board. 
 
 \begin{figure}
 \centering
