--- a/software/development.tex
+++ b/software/development.tex
@@ -68,7 +68,7 @@ B<\lfloor\log_{2}\left\{\frac{2^{16}}{|x|}\right\}\rfloor
 
 \subsubsection{Dealing with signed integers \label{sec:asr}}
 
-While the process of using simple bit shifts to act as a scale factor is acceptable if all values are known to be positive, and are as such stored unsigned. However, as the algorithm makes use of negative weights, and the gyroscope is capable of producing negative readings, the numbers used in the team's implementation are required to be signed.
+The process of using simple bit shifts to act as a scale factor is acceptable if all values are known to be positive, and are as such stored unsigned. However, as the algorithm makes use of negative weights, and the gyroscope is capable of producing negative readings, the numbers used in the team's implementation are required to be signed.
 
 Signed numbers treat the highest bit of an integer as negative, and the remaining bits as positive. This effectively shifts the range of values is able to hold, down by 50\%. Performing a naive bit shift on a negative number in this format would drastically corrupt its value by unsetting the MSB incorrectly.
 
