Added new description of submission zip

--- a/appendices/source.tex
+++ b/appendices/source.tex
@@ -5,19 +5,25 @@ The source code for the algorithm, designed to run on the \verb|LPC11U24_401|, i
 \begin{figure}[!h]
 \dirtree{%
 .1 /.
-.2 main.cpp\DTcomment{Main runnable file}.
-.2 classify.h\DTcomment{Contains classifier}.
-.2 heuristic.h\DTcomment{Contains added heuristic code}.
-.2 Makefile\DTcomment{Builds the project with $make$}.
-.2 lib.
-.3 startup\_LPC11x.S\DTcomment{mBed provided ASM to start the device}.
-.3 system\_LPC11xx.c\DTcomment{mBed provided function to init the clock}.
-.3 LPC11U24.ld\DTcomment{mBed provided linker script}.
-.3 api.
-.4 DigitalOut.h\DTcomment{Optimised mBed library for LEDs}.
-.4 i2c\_api.h\DTcomment{Optimised mBed I2C library}.
-.4 LPC11Uxx.h\DTcomment{Defines WDT speed and system memory maps}.
-.4 MPU6050.h\DTcomment{Optimised library for Gyroscope}.
+.2 data/\DTcomment{Raw CSV Data and scripts used to proceess these}.
+.2 docs/\DTcomment{Agenda, Minutes and ERGO Application}.
+.2 ml-java/\DTcomment{Java MLP Implementation and C code generator}.
+.2 mbed/.
+.3 main.cpp\DTcomment{Main runnable file}.
+.3 classify.h\DTcomment{Contains classifier}.
+.3 heuristic.h\DTcomment{Contains added heuristic code}.
+.3 asr.h\DTcomment{Arithmetic Shift Right Implementation}.
+.3 gpd2.lst\DTcomment{Disassembly and symbol list of compiled binary}.
+.3 Makefile\DTcomment{Builds the project with $make$}.
+.3 lib.
+.4 startup\_LPC11x.S\DTcomment{mBed provided ASM to start the device}.
+.4 system\_LPC11xx.c\DTcomment{mBed provided function to init the clock}.
+.4 LPC11U24.ld\DTcomment{mBed provided linker script}.
+.4 api.
+.5 DigitalOut.h\DTcomment{Optimised mBed library for LEDs}.
+.5 i2c\_api.h\DTcomment{Optimised mBed I2C library}.
+.5 LPC11Uxx.h\DTcomment{Defines WDT speed and system memory maps}.
+.5 MPU6050.h\DTcomment{Optimised library for Gyroscope}.
 }
 \label{fig:source}
 \caption{Source code directory structure}
