Minor Formatting of figures in Hardware chapter

--- a/embedded/emulation/fpga.tex
+++ b/embedded/emulation/fpga.tex
@@ -10,6 +10,6 @@ The board used for this project is the Xilinx Digilent Nexys4, which can be seen
 
 \begin{figure}
 \centering
-\includegraphics[scale=0.7]{figures/nexys4.PNG}
+\includegraphics{figures/nexys4.PNG}
 \caption{Xilinx Digilent Nexys4 \label{fig:nexys4}}
 \end{figure}
