--- a/embedded/initialdesign.tex
+++ b/embedded/initialdesign.tex
@@ -4,7 +4,7 @@ The hardware side of this project requires the ARM Cortex M0 processor to obtain
 
 Figure~\ref{fig:hardware_schematic_development} shows the block diagram for the hardware part of the project whilst still developing and Figure~\ref{fig:hardware_schematic_final} shows the block diagram for the target final system.
 
-\begin{figure}
+\begin{figure}[!hb]
 	\centering
 	\includegraphics{hardware-schematics-development.pdf}
 	\caption{Hardware Block Diagram - Development}
