--- a/results/size.tex
+++ b/results/size.tex
@@ -4,13 +4,7 @@ In order to assess the overall size requirement of the completed algorithm, two 
 
 \subsection{Binary Size}
 
-Finding the overall size of the binary file is a trivial task, simply running \verb|du -b output.bin| on a Linux-like console gives the result of 3168 bytes, or 3.09kB. However, it is important to assess the contributing factors to this size. The sections which are included in the compiled binary are \verb|.text|, which contains the program code and constant values, \verb|.data|, non-zero initialisations for the heap and finally, \verb|.ARM.exidx| which is an 8 byte section required for stack unwinding.
-
-The size of \verb|.data| can be obtained by using arm's \verb|arm-none-eabi-size| command, which mirrors the functionality of GCC's \verb|size|; this gives a size of 108 for non-zero heap initialisations. The majority of this is LibC values, with the exception of 4 bytes for an array index initialised to -1 which is used by multiple functions in the algorithm.
-
-Finally, the size of \verb|.text|, which is now plainly 3052 bytes, must be assessed; again it is more meaningful to look into this in further detail. Fortunately, this can be performed by viewing the annotated disassembly of the binary. Table \ref{tab:prog-size} shows the breakdown of the binary file, with the values discussed in this section and the code split into logical areas.
-
-\begin{table}[h]
+\begin{table}[b]
     \centering
     \begin{tabular}{|l|c|}
         \hline
@@ -27,6 +21,12 @@ Finally, the size of \verb|.text|, which is now plainly 3052 bytes, must be asse
     \end{tabular}
     \caption{Binary File Size \label{tab:prog-size}}
 \end{table}
+
+Finding the overall size of the binary file is a trivial task, simply running \verb|du -b output.bin| on a Linux-like console gives the result of 3168 bytes, or 3.09kB. However, it is important to assess the contributing factors to this size. The sections which are included in the compiled binary are \verb|.text|, which contains the program code and constant values, \verb|.data|, non-zero initialisations for the heap and finally, \verb|.ARM.exidx| which is an 8 byte section required for stack unwinding.
+
+The size of \verb|.data| can be obtained by using arm's \verb|arm-none-eabi-size| command, which mirrors the functionality of GCC's \verb|size|; this gives a size of 108 for non-zero heap initialisations. The majority of this is LibC values, with the exception of 4 bytes for an array index initialised to -1 which is used by multiple functions in the algorithm.
+
+Finally, the size of \verb|.text|, which is now plainly 3052 bytes, must be assessed; again it is more meaningful to look into this in further detail. Fortunately, this can be performed by viewing the annotated disassembly of the binary. Table \ref{tab:prog-size} shows the breakdown of the binary file, with the values discussed in this section and the code split into logical areas.
 
 \subsection{Memory Size}
 
@@ -52,6 +52,7 @@ The stack usage of each function alone is not enough to assure the stack usage o
 
 We must first determine each of the possible stack states and their respective sizes, to do this we walk forward from main along each edge, adding the stack size of each node we encounter, until we can move no further. We then repeat this until no further routes can be found. Finally, the route with the maximum stack size is picked; this is the biggest the stack can ever be. This is shown by figure \ref{fig:stack-routes}, and from it is therefore clear that the stack never exceeds 120 bytes.
 
+\clearpage
 \subsubsection{Conclusion}
 
 The total required RAM size can be calculated by the summation of the total binary size, the size of zero-initialised heap variables and the maximum stack size. This comes to 3456 bytes leaving 4736 bytes, or just over 4.6kB, free if deployed on an 8kB device. This space gives scope for providing support for a greater set of exercises, or storing data about the users' exercises for long flights.
